jellyfin: Add GPU runtime and resources

--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -4,6 +4,9 @@ app-template:
       labels:
         backup/retain: quaterly
       type: statefulset
+      pod:
+        enableServiceLinks: false
+        runtimeClassName: nvidia
       containers:
         jellyfin:
           image:
@@ -37,8 +40,10 @@ app-template:
             requests:
               cpu: 10m
               memory: 2.3Gi
+              nvidia.com/gpu: "1"
             limits:
               memory: 10Gi
+              nvidia.com/gpu: "1"
 
   service:
     jellyfin:
