--- a/metal/roles/nvidia-container-runtime/tasks/main.yml
+++ b/metal/roles/nvidia-container-runtime/tasks/main.yml
@@ -26,6 +26,7 @@
       - nvidia-cuda-toolkit
       # for nvidia-smi
       - nvidia-utils-535-server
+      - libnvidia-encode-535-server
     update_cache: true
   notify: restart server
 
