minio: Add `ignore_invalid_headers off` and `chnked_transfer_encoding off`

--- a/apps/cross-backups/values.yaml
+++ b/apps/cross-backups/values.yaml
@@ -33,6 +33,11 @@ minio:
       nginx.ingress.kubernetes.io/proxy-buffering: "off"
       nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
       nginx.ingress.kubernetes.io/proxy-body-size: 1000G
+      # https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
+      nginx.ingress.kubernetes.io/server-snippet: |
+        ignore_invalid_headers off;
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        chunked_transfer_encoding off;
     hosts:
       - &host cross-backups.grigri.cloud
     tls:
@@ -47,6 +52,8 @@ minio:
       external-dns.alpha.kubernetes.io/enabled: "true"
       external-dns.alpha.kubernetes.io/target: grigri.cloud
       cert-manager.io/cluster-issuer: letsencrypt-prod-dns
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        chunked_transfer_encoding off;
     hosts:
       - &hostMC mc-cross-backups.grigri.cloud
     tls:
