--- a/platform/minio/values.yaml
+++ b/platform/minio/values.yaml
@@ -32,6 +32,11 @@ minio:
       nginx.ingress.kubernetes.io/proxy-buffering: "off"
       nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
       nginx.ingress.kubernetes.io/proxy-body-size: 1000G
+      # https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
+      nginx.ingress.kubernetes.io/server-snippet: |
+        ignore_invalid_headers off;
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        chunked_transfer_encoding off;
     hosts:
       - &host s3.internal.grigri.cloud
     tls:
@@ -45,6 +50,8 @@ minio:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       external-dns.alpha.kubernetes.io/enabled: "true"
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        chunked_transfer_encoding off;
     hosts:
       - &hostMC mc-s3.internal.grigri.cloud
     tls:
