velero: Change to minio internal URL

--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -35,7 +35,7 @@ velero:
         config:
           region: minio
           s3ForcePathStyle: true
-          s3Url: https://s3.internal.grigri.cloud/
+          s3Url: minio.minio.svc:9000/
     # Is configured but not currenlty in use in velero schedules.
     # Probably will use it in the future if they add a feature to upload snapshots to S3
     # or if we decide to mirror them between different Cephs. SnapshotClass are already annotated.
@@ -51,7 +51,7 @@ velero:
           provider: aws
           region: minio
           s3ForcePathStyle: "true"
-          s3Url: https://s3.internal.grigri.cloud/
+          s3Url: minio.minio.svc:9000/
       - name: zfspv-incr
         provider: openebs.io/zfspv-blockstore
         default: true
@@ -76,7 +76,7 @@ velero:
           provider: aws
           region: minio
           s3ForcePathStyle: "true"
-          s3Url: https://s3.internal.grigri.cloud/
+          s3Url: minio.minio.svc:9000/
 
     uploaderType: restic
     fsBackupTimeout: 32h
