--- a/platform/velero/templates/cross-backup/external-secret.yaml
+++ b/platform/velero/templates/cross-backup/external-secret.yaml
@@ -18,7 +18,7 @@ spec:
           provider = Minio
           access_key_id = velero
           secret_access_key = {{`{{ .veleroPassword }}`}}
-          endpoint = https://s3.internal.grigri.cloud/
+          endpoint = http://minio.minio.svc:9000/
           acl = private
 
           [cross-backup]
