--- a/platform/git/templates/postgres-secret.yaml
+++ b/platform/git/templates/postgres-secret.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: vault
+    name: k8s-store
   target:
     name: gitea-app-ini-database
     template:
@@ -13,12 +13,6 @@ spec:
         database: |
           USER={{`"{{ .username }}"`}}
           PASSWD={{`"{{ .password }}"`}}
-  data:
-    - secretKey: username
-      remoteRef:
-        key: /git/postgres
-        property: username
-    - secretKey: password
-      remoteRef:
-        key: /git/postgres
-        property: password
+  dataFrom:
+    - extract:
+        key: gitea.gitea-postgres.credentials.postgresql.acid.zalan.do
