external-secrets: Add namespace to ClusterSecretStore caProvider

--- a/platform/external-secrets/templates/k8s-store/clustersecretstore.yaml
+++ b/platform/external-secrets/templates/k8s-store/clustersecretstore.yaml
@@ -12,6 +12,7 @@ spec:
           type: ConfigMap
           name: kube-root-ca.crt
           key: ca.crt
+          namespace: external-secrets
       auth:
         serviceAccount:
           name: external-secrets-k8s-store
