git: Fix postgres password secret path

--- a/platform/git/templates/postgres-secret.yaml
+++ b/platform/git/templates/postgres-secret.yaml
@@ -15,4 +15,4 @@ spec:
           PASSWD={{`"{{ .password }}"`}}
   dataFrom:
     - extract:
-        key: gitea.gitea-postgres.credentials.postgresql.acid.zalan.do
+        key: git/gitea.gitea-postgres.credentials.postgresql.acid.zalan.do
