git: Move k8s secret store to git app

--- a/platform/git/templates/postgres-secret.yaml
+++ b/platform/git/templates/postgres-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gitea-app-ini-database
 spec:
   secretStoreRef:
-    kind: ClusterSecretStore
+    kind: SecretStore
     name: k8s-store
   target:
     name: gitea-app-ini-database
@@ -15,4 +15,4 @@ spec:
           PASSWD={{`"{{ .password }}"`}}
   dataFrom:
     - extract:
-        key: git/gitea.gitea-postgres.credentials.postgresql.acid.zalan.do
+        key: gitea.gitea-postgres.credentials.postgresql.acid.zalan.do
