--- a/platform/git/templates/k8s-secret-store/rbac.yaml
+++ b/platform/git/templates/k8s-secret-store/rbac.yaml
@@ -3,11 +3,13 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: external-secrets-k8s-store
+  namespace: git
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: external-secrets-k8s-store
+  namespace: git
 rules:
   - apiGroups:
       - ""
@@ -25,14 +27,14 @@ rules:
       - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: external-secrets-k8s-store
+  namespace: git
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: external-secrets-k8s-store
 subjects:
   - kind: ServiceAccount
     name: external-secrets-k8s-store
-    namespace: external-secrets
