--- a/platform/git/templates/k8s-secret-store/secret-store.yaml
+++ b/platform/git/templates/k8s-secret-store/secret-store.yaml
@@ -1,19 +1,18 @@
 apiVersion: external-secrets.io/v1beta1
-kind: ClusterSecretStore
+kind: SecretStore
 metadata:
   name: k8s-store
+  namespace: git
 spec:
   provider:
     kubernetes:
-      remoteNamespace: monitoring
+      remoteNamespace: git
       server:
         url: https://kubernetes.default.svc.cluster.local
         caProvider:
           type: ConfigMap
           name: kube-root-ca.crt
           key: ca.crt
-          namespace: external-secrets
       auth:
         serviceAccount:
           name: external-secrets-k8s-store
-          namespace: external-secrets
