velero: Remove trailing slash

--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -35,8 +35,8 @@ velero:
         config:
           region: minio
           s3ForcePathStyle: true
-          s3Url: http://minio.minio.svc:9000/
-          publicUrl: https://s3.internal.grigri.cloud/
+          s3Url: http://minio.minio.svc:9000
+          publicUrl: https://s3.internal.grigri.cloud
     # Is configured but not currenlty in use in velero schedules.
     # Probably will use it in the future if they add a feature to upload snapshots to S3
     # or if we decide to mirror them between different Cephs. SnapshotClass are already annotated.
@@ -52,7 +52,7 @@ velero:
           provider: aws
           region: minio
           s3ForcePathStyle: "true"
-          s3Url: http://minio.minio.svc:9000/
+          s3Url: http://minio.minio.svc:9000
       - name: zfspv-incr
         provider: openebs.io/zfspv-blockstore
         default: true
@@ -77,7 +77,7 @@ velero:
           provider: aws
           region: minio
           s3ForcePathStyle: "true"
-          s3Url: http://minio.minio.svc:9000/
+          s3Url: http://minio.minio.svc:9000
 
     uploaderType: restic
     fsBackupTimeout: 32h
