hass: Try to define input_select to climate appdaemon

--- a/apps/home-assistant/appdaemon/apps/apps.yaml
+++ b/apps/home-assistant/appdaemon/apps/apps.yaml
@@ -5,15 +5,15 @@ climate_control:
     enable: input_boolean.appdaemon_climate_enable
   input_number:
     min_hours_per_day: input_number.appdaemon_climate_min_hours_per_day
-  input_text:
-    heat_mode: input_select.appdaemon_climate_heat_mode
+  input_select:
+    heat_mode: input_select.appdaemon_climate_heat_mode,Heat+DHW,Cool+DHW
   sensor:
     pvpc_price: sensor.esios_pvpc
   notify:
     enabled: true
     target: agil
   climate:
-    enabled: true
+    enabled: false
     entity: input_select.heishamon_heatmode
     on_mode: Heat+DHW
     off_mode: DHW
