--- a/apps/home-assistant/appdaemon/apps/apps.yaml
+++ b/apps/home-assistant/appdaemon/apps/apps.yaml
@@ -12,7 +12,7 @@ climate_control:
     enabled: true
     target: agil
   climate:
-    enabled: true
+    enabled: false
     entity: input_select.heishamon_heatmode
     on_mode: Heat+DHW
     off_mode: DHW
