cilium: Disable `autoDirectNodeRoutes`
It requires disable tuneling

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -61,7 +61,7 @@ securityContext:
       - PERFMON
       - BPF
 
-autoDirectNodeRoutes: true
+autoDirectNodeRoutes: false
 
 # -- Enable bandwidth manager to optimize TCP and UDP workloads and allow
 # for rate-limiting traffic from individual Pods with EDT (Earliest Departure
