--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -172,7 +172,7 @@ dashboards:
 # -- Enable use of the remote node identity.
 # ref: https://docs.cilium.io/en/v1.7/install/upgrade/#configmap-remote-node-identity
 # Deprecated without replacement in 1.15. To be removed in 1.16.
-remoteNodeIdentity: false
+remoteNodeIdentity: true
 
 operator:
   prometheus:
