--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -72,7 +72,7 @@ bandwidthManager:
   enabled: true
   # -- Activate BBR TCP congestion control for Pods
   # requires Kernel 5.18.X or later (grigri is 5.15)
-  bbr: true
+  bbr: false
 
 bgp:
   enabled: false
