cilium: Enable device detection and bbr

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -72,7 +72,7 @@ bandwidthManager:
   enabled: true
   # -- Activate BBR TCP congestion control for Pods
   # requires Kernel 5.18.X or later (grigri is 5.15)
-  bbr: false
+  bbr: true
 
 bgp:
   enabled: false
@@ -90,6 +90,8 @@ bgpControlPlane:
 containerRuntime:
   integration: containerd
   socketPath: /var/run/k3s/containerd/containerd.sock
+
+enableRuntimeDeviceDetection: true
 
 loadBalancer:
   standalone: false
