metal: Add nvfbc library to nvidia

--- a/metal/roles/nvidia-container-runtime/tasks/main.yml
+++ b/metal/roles/nvidia-container-runtime/tasks/main.yml
@@ -30,6 +30,8 @@
       # for game on whales
       - xserver-xorg-video-nvidia-550-server
       - git
+      ## not sure if needed
+      - libnvidia-fbc1-550-server
     update_cache: true
   notify: restart server
 
