immich: Add startup probe to immich

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -61,6 +61,11 @@ app-template:
               enabled: true
             readiness:
               enabled: true
+            startup:
+              enabled: true
+              spec:
+                failureThreshold: 30
+                periodSeconds: 5
     microservices:
       strategy: RollingUpdate
       pod:
