--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -3,7 +3,7 @@ variables:
     DB_PORT: "5432"
     ENABLE_MAPBOX: "true"
     # "IMMICH_LOG_LEVEL" must be one of [verbose, debug, info, warn, error, fatal]
-    IMMICH_LOG_LEVEL: verbose
+    IMMICH_LOG_LEVEL: info
     NODE_ENV: "production"
     REDIS_HOSTNAME: immich-redis
     REDIS_PORT: "6379"
