immich: Increase postgres vol size to 10Gi

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -18,7 +18,8 @@ spec:
       memory: 10Gi
 
   volume:
-    size: 3Gi
+    # for storing 3 months of snapshots
+    size: 10Gi
 
   users:
     immich:
