--- a/system/oauth2-proxy/Chart.yaml
+++ b/system/oauth2-proxy/Chart.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: oauth2-proxy
     version: 7.7.9
     repository: https://oauth2-proxy.github.io/manifests
+  - name: app-template
+    version: 3.2.1
+    repository: https://bjw-s.github.io/helm-charts/
