--- a/system/oauth2-proxy/values.yaml
+++ b/system/oauth2-proxy/values.yaml
@@ -59,10 +59,10 @@ oauth2-proxy:
       requiredDuringSchedulingIgnoredDuringExecution:
         - labelSelector:
             matchExpressions:
-              - key: app.kubernetes.io/name
+              - key: app.kubernetes.io/component
                 operator: In
                 values:
-                  - oauth2-proxy
+                  - authentication-proxy
           topologyKey: "kubernetes.io/hostname"
 
 app-template:
@@ -93,6 +93,21 @@ app-template:
   defaultPodOptions:
     nodeSelector:
       kubernetes.io/hostname: prusik
+
+    affinity:
+      podAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: app.kubernetes.io/name
+                  operator: In
+                  values:
+                    - oauth2-proxy
+                - key: app.kubernetes.io/component
+                  operator: In
+                  values:
+                    - authentication-proxy
+            topologyKey: kubernetes.io/hostname
 
   service:
     redis:
