--- a/apps/http-echo/values.yaml
+++ b/apps/http-echo/values.yaml
@@ -75,6 +75,8 @@ app-template:
         nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
         nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, X-Auth-Request-User, X-Auth-Request-Groups, X-Auth-Request-Email, X-Auth-Request-Preferred-Username, X-Auth-Request-Access-Token"
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+
       hosts:
         - host: &host http-echo.grigri.cloud
           paths:
