--- a/apps/esphome/values.yaml
+++ b/apps/esphome/values.yaml
@@ -53,8 +53,9 @@ app-template:
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
+        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=esphome-users@idm.grigri.cloud
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
       hosts:
         - host: &host esphome.internal.grigri.cloud
           paths:
