--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -292,8 +292,9 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/target: grigri.cloud
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
+        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=appdaemon-users@idm.grigri.cloud
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
       hosts:
         - host: &host appdaemon.grigri.cloud
           paths:
