--- a/apps/navidrome/values.yaml
+++ b/apps/navidrome/values.yaml
@@ -55,9 +55,10 @@ app-template:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
         external-dns.alpha.kubernetes.io/enabled: "true"
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
+        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=navidrome-users@idm.grigri.cloud
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
         nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
         # Enable subsonic client
         nginx.ingress.kubernetes.io/auth-snippet: |
             if ( $request_uri ~ "/rest" ) {
@@ -83,9 +84,11 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/target: grigri.cloud
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
+        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=navidrome-users@idm.grigri.cloud
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
         nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
+
         # Enable subsonic client
         nginx.ingress.kubernetes.io/auth-snippet: |
             if ( $request_uri ~ "/rest" ) {
