--- a/apps/bazarr/values.yaml
+++ b/apps/bazarr/values.yaml
@@ -79,6 +79,7 @@ app-template:
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
         nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=bazarr-users
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
       hosts:
         - host: &host bazarr.grigri.cloud
           paths:
