argocd: Add doc for creating server.secretKey

--- a/bootstrap/argocd/templates/argocd-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-secret.yaml
@@ -13,6 +13,7 @@ spec:
       remoteRef:
         key: /argocd/webhook
         property: token
+    # head -c 32 /dev/urandom | base64
     - secretKey: server.secretkey
       remoteRef:
         key: /argocd/secret-key
