--- a/apps/tanque/templates/ingress.yaml
+++ b/apps/tanque/templates/ingress.yaml
@@ -6,8 +6,9 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns
     external-dns.alpha.kubernetes.io/enabled: "true"
     external-dns.alpha.kubernetes.io/target: grigri.cloud
-    nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
+    nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=tanque-users@idm.grigri.cloud
     nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
 spec:
   ingressClassName: nginx-external
   rules:
