--- a/apps/github-exporter/values.yaml
+++ b/apps/github-exporter/values.yaml
@@ -16,7 +16,7 @@ app-template:
                   port: &port 9171
             readiness: *probe
           env:
-            REPOS: rash-sh/rash, pando85/timer, kanidm/kanidm, pando85/homelab, pando85/gearr
+            REPOS: rash-sh/rash, pando85/timer, kanidm/kanidm, pando85/homelab, pando85/gearr, pando85/i3-auto-layout
           envFrom:
             - secretRef:
                 name: github-exporter
