--- a/apps/flaresolverr/values.yaml
+++ b/apps/flaresolverr/values.yaml
@@ -13,7 +13,7 @@ controllers:
             cpu: 10m
             memory: 128Mi
           limits:
-            memory: 500Mi
+            memory: 2Gi
 
 service:
   main:
