flaresolverr: Change version to pr-1282
This will apply the last fix to make it works

--- a/apps/flaresolverr/values.yaml
+++ b/apps/flaresolverr/values.yaml
@@ -5,7 +5,7 @@ controllers:
       flaresolverr:
         image:
           repository: ghcr.io/flaresolverr/flaresolverr
-          tag: v3.3.21
+          tag: pr-1282
         env:
           TZ: Europe/Madrid
         resources:
