cilium: Enable privileged true

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -14,6 +14,8 @@ serviceAccounts:
     create: false
 
 securityContext:
+  # TODO: remove privileged: true
+  privileged: true
   capabilities:
     ciliumAgent:
       # Use to set socket permission
