--- a/apps/stump/values.yaml
+++ b/apps/stump/values.yaml
@@ -8,7 +8,7 @@ app-template:
         stump:
           image:
             repository: aaronleopold/stump
-            tag: nightly@sha256:96297c7763a3a31ea476a7881a40dd7004ccd2f8de47ed90345e7343c95b1798
+            tag: 0.0.5
           env:
             STUMP_IN_DOCKER: "true"
             STUMP_CONFIG_DIR: /config
