--- a/apps/freshrss/config/FreshRSS.Apache.conf
+++ b/apps/freshrss/config/FreshRSS.Apache.conf
@@ -1,3 +1,4 @@
+# source: https://github.com/FreshRSS/FreshRSS/blob/1.24.2/Docker/FreshRSS.Apache.conf
 ServerName freshrss.localhost
 Listen 80
 DocumentRoot /var/www/FreshRSS/p/
