freshrss: Change to OIDC envars setup for apache params

--- a/apps/freshrss/config/FreshRSS.Apache.conf
+++ b/apps/freshrss/config/FreshRSS.Apache.conf
@@ -33,10 +33,9 @@ CustomLog "|/var/www/FreshRSS/cli/sensitive-log.sh" combined_proxy
 	OIDCClientSecret ${OIDC_CLIENT_SECRET}
 
     ## BEGIN OF CUSTOM VALUES ##
-    OIDCRefreshAccessTokenBeforeExpiry 2592000
-    OIDCSessionInactivityTimeout 2592000
-    OIDCSessionMaxDuration 2592000
-    OIDCSessionType client-cookie:persistent:store_id_token
+    OIDCSessionInactivityTimeout ${OIDC_SESSION_INACTIVITY_TIMEOUT:-300}
+    OIDCSessionMaxDuration ${OIDC_SESSION_MAX_DURATION:-27200}
+    OIDCSessionType ${OIDC_SESSION_TYPE:-server-cache}
     ## END OF CUSTOM VALUES ##
 
 	OIDCRedirectURI /i/oidc/
