--- a/apps/freshrss/values.yaml
+++ b/apps/freshrss/values.yaml
@@ -19,6 +19,9 @@ app-template:
             OIDC_REMOTE_USER_CLAIM: preferred_username
             OIDC_SCOPES: "openid profile email"
             OIDC_X_FORWARDED_HEADERS: X-Forwarded-Host X-Forwarded-Port X-Forwarded-Proto
+            OIDC_SESSION_INACTIVITY_TIMEOUT: 2592000
+            OIDC_SESSION_MAX_DURATION: 2592000
+            OIDC_SESSION_TYPE: client-cookie:persistent:store_id_token
           envFrom:
             - secretRef:
                 name: freshrss-sso
