--- a/apps/freshrss/templates/configmap.yaml
+++ b/apps/freshrss/templates/configmap.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: freshrss-overwrite-apache-config
 data:
-{{ (.Files.Glob "config/*.yaml").AsConfig | indent 2 }}
+{{ (.Files.Glob "config/*").AsConfig | indent 2 }}
