--- a/apps/freshrss/config/FreshRSS.Apache.conf
+++ b/apps/freshrss/config/FreshRSS.Apache.conf
@@ -33,9 +33,9 @@ CustomLog "|/var/www/FreshRSS/cli/sensitive-log.sh" combined_proxy
 	OIDCClientSecret ${OIDC_CLIENT_SECRET}
 
 	## BEGIN OF CUSTOM VALUES ##
-	OIDCSessionInactivityTimeout ${OIDC_SESSION_INACTIVITY_TIMEOUT:-300}
-	OIDCSessionMaxDuration ${OIDC_SESSION_MAX_DURATION:-27200}
-	OIDCSessionType ${OIDC_SESSION_TYPE:-server-cache}
+	OIDCSessionInactivityTimeout ${OIDC_SESSION_INACTIVITY_TIMEOUT}
+	OIDCSessionMaxDuration ${OIDC_SESSION_MAX_DURATION}
+	OIDCSessionType ${OIDC_SESSION_TYPE}
 	## END OF CUSTOM VALUES ##
 
 	OIDCRedirectURI /i/oidc/
