--- a/apps/freshrss/values.yaml
+++ b/apps/freshrss/values.yaml
@@ -22,6 +22,7 @@ app-template:
             OIDC_SESSION_INACTIVITY_TIMEOUT: "2592000"
             OIDC_SESSION_MAX_DURATION: "2592000"
             OIDC_SESSION_TYPE: client-cookie:persistent:store_id_token
+            OIDCSessionInactivityTimeout: "2592000"
           envFrom:
             - secretRef:
                 name: freshrss-sso
