--- a/apps/freshrss/values.yaml
+++ b/apps/freshrss/values.yaml
@@ -21,6 +21,7 @@ app-template:
             OIDC_X_FORWARDED_HEADERS: X-Forwarded-Host X-Forwarded-Port X-Forwarded-Proto
             OIDC_SESSION_INACTIVITY_TIMEOUT: "2592000"
             OIDC_SESSION_MAX_DURATION: "2592000"
+            OIDC_SESSION_TYPE: server-cache
             OIDCSessionInactivityTimeout: "2592000"
           envFrom:
             - secretRef:
