--- a/system/monitoring/kustomization.yaml
+++ b/system/monitoring/kustomization.yaml
@@ -58,6 +58,15 @@ patches:
     target:
       group: apiextensions.k8s.io
       kind: CustomResourceDefinition
+      name: alertmanagerconfigs.monitoring.coreos.com
+      version: v1
+  - patch: |-
+      - op: add
+        path: "/metadata/annotations/argocd.argoproj.io~1sync-options"
+        value: "Replace=true"
+    target:
+      group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
       name: prometheusagents.monitoring.coreos.com
       version: v1
   - patch: |-
