--- a/metal/roles/prepare/tasks/main.yml
+++ b/metal/roles/prepare/tasks/main.yml
@@ -14,6 +14,8 @@
 
 - name: Create user and enable login
   import_tasks: user.yml
+  tags:
+    - user
 
 - name: Set up sshd
   import_tasks: sshd.yml
