--- a/platform/vault/templates/vault.yaml
+++ b/platform/vault/templates/vault.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   size: 1
   # renovate: datasource=docker
-  image: vault:1.13.3
+  image: hashicorp/vault:1.14.10
   # specify a custom bank-vaults image with bankVaultsImage:
   # bankVaultsImage: ghcr.io/banzaicloud/bank-vaults:latest
 
