vault: Add TLS to server

--- a/platform/vault/templates/vault.yaml
+++ b/platform/vault/templates/vault.yaml
@@ -73,6 +73,7 @@ spec:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       external-dns.alpha.kubernetes.io/enabled: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     spec:
       ingressClassName: nginx-internal
       rules:
@@ -128,10 +129,8 @@ spec:
     listener:
       tcp:
         address: "0.0.0.0:8200"
-        # TODO enable TLS?
-        tls_disable: true
-        # tls_cert_file: /vault/tls/server.crt
-        # tls_key_file: /vault/tls/server.key
+        tls_cert_file: /vault/tls/server.crt
+        tls_key_file: /vault/tls/server.key
     ui: true
 
   vaultEnvsConfig:
