external-secrets: Add CA and configure vault https

--- a/platform/external-secrets/templates/clustersecretstore.yaml
+++ b/platform/external-secrets/templates/clustersecretstore.yaml
@@ -5,8 +5,13 @@ metadata:
 spec:
   provider:
     vault:
-      server: http://vault.vault:8200
+      server: https://vault.vault:8200
       path: secret
+      namespace: vault
+      caprovider:
+        type: Secret
+        name: vault-tls
+        key: ca.crt
       auth:
         kubernetes:
           mountPath: kubernetes
