external-secrets: Fix key case

--- a/platform/external-secrets/templates/clustersecretstore.yaml
+++ b/platform/external-secrets/templates/clustersecretstore.yaml
@@ -8,7 +8,7 @@ spec:
       server: https://vault.vault:8200
       path: secret
       namespace: vault
-      caprovider:
+      caProvider:
         type: Secret
         name: vault-tls
         key: ca.crt
