--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -79,7 +79,7 @@
     },
     {
       matchPackageNames: [
-        "vault",
+        "hashicorp/vault",
         "registry.k8s.io/sig-storage/csi-provisioner",
         "registry.k8s.io/sig-storage/csi-snapshotter",
       ],
