--- a/apps/home-assistant/rules/custom.yaml
+++ b/apps/home-assistant/rules/custom.yaml
@@ -16,3 +16,12 @@
   for: 10m
   labels:
     severity: warning
+- alert: VacuumCleaningRequired
+  # Vacuum robot needs areound 45 minutes for cleaning the main rooms.
+  # 45 * 60 / (24 * 60 * 60) = 0.03125
+  expr: avg_over_time(hass_binary_sensor_state{entity="binary_sensor.valetudo_working_state"}[7d]) > 0.03125
+  annotations:
+    description: Vacuum robot is not cleaning the main rooms since the last 7 days.
+  for: 1d
+  labels:
+    severity: warning
