--- a/system/loki/values.yaml
+++ b/system/loki/values.yaml
@@ -34,6 +34,10 @@ loki:
 
   auth_enabled: false
 
+  compactor:
+    working_directory: /var/loki/compactor/
+    retention_enabled: true
+
 rbac:
   pspEnabled: false
 
