loki: Add `delete_request_store`

--- a/system/loki/values.yaml
+++ b/system/loki/values.yaml
@@ -37,6 +37,7 @@ loki:
   compactor:
     working_directory: /var/loki/compactor/
     retention_enabled: true
+    delete_request_store: filesystem
 
 rbac:
   pspEnabled: false
