loki: Change working_directory

--- a/system/loki/values.yaml
+++ b/system/loki/values.yaml
@@ -35,7 +35,7 @@ loki:
   auth_enabled: false
 
   compactor:
-    working_directory: /var/loki/compactor/
+    working_directory: /var/loki/compactor/retention
     retention_enabled: true
     delete_request_store: filesystem
 
